Refac: 디자인 업데이트

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,6 +7,11 @@ body {
   margin: 0;
 }
 
+body * {
+  font-family: 'Pretendard';
+  font-style: normal;
+}
+
 ::-webkit-scrollbar {
   width: 0px;
 }
